# IDS-APIs

./: Documentation.docx
c#/: Attocube.chm  CSharpAPIDLL.xml
examples/: CMakeLists.txt  c.example.c  csharp.example.cs  matlabexample.m  python.example.py
examples/csharp/: CMakeLists.txt
matlab/: IDS_adjustment_getAdjustmentEnabled.m  IDS_adjustment_getContrastInPermille.m  IDS_axis_apply.m  IDS_axis_discard.m  IDS_axis_getMasterAxis.m  IDS_axis_getPassMode.m  IDS_axis_setMasterAxis.m  IDS_axis_setPassMode.m  IDS_displacement_getAbsolutePosition.m  IDS_displacement_getAbsolutePositions.m  IDS_displacement_getAverageN.m  IDS_displacement_getAxesDisplacement.m  IDS_displacement_getAxisDisplacement.m  IDS_displacement_getAxisSignalQuality.m  IDS_displacement_getMeasurementEnabled.m  IDS_displacement_getReferencePosition.m  IDS_displacement_getReferencePositions.m  IDS_displacement_getSignalQuality.m  IDS_displacement_linProc.m  IDS_displacement_setAverageN.m  IDS_ecu_disable.m  IDS_ecu_enable.m  IDS_ecu_getConnected.m  IDS_ecu_getEnabled.m  IDS_ecu_getHumidityInPercent.m  IDS_ecu_getPressureInHPa.m  IDS_ecu_getRefractiveIndex.m  IDS_ecu_getRefractiveIndexCompensationMode.m  IDS_ecu_getRefractiveIndexForCompensation.m  IDS_ecu_getTemperatureInDegrees.m  IDS_ecu_setRefractiveIndexCompensationMode.m  IDS_getLockStatus.m  IDS_grantAccess.m  IDS_lock.m  IDS_manual_getHumidityInPercent.m  IDS_manual_getPressureInHPa.m  IDS_manual_getRefractiveIndex.m  IDS_manual_getTemperatureInDegrees.m  IDS_manual_setHumidityInPercent.m  IDS_manual_setPressureInHPa.m  (+219 more)
python/: IDS.py  (+14 more)
(+307 files in other folders)
